--- a/ac/README.html
+++ b/ac/README.html
@@ -132,7 +132,7 @@
         </table>
         
         <p>
-            Special thanks to player1 and Wurfel for secret testing ;)
+            Special thanks to player1 for secret testing ;)
         </p>
         
         <h3>Texture sources</h3>
