--- a/ac/README.html
+++ b/ac/README.html
@@ -132,7 +132,7 @@
         </table>
         
         <p>
-            Special thanks to player1 for secret testing ;)
+            Also thanks to kurtis84 and player1 for testing.
         </p>
         
         <h3>Texture sources</h3>
