--- a/ac/README.html
+++ b/ac/README.html
@@ -162,7 +162,7 @@
         </p>
         
         <p>
-            As this game consists of different packages with different licenses, see those files in your ActionCube installation
+            As this game consists of different packages with different licenses, see these files in your ActionCube installation
             for additional information:
         </p>
         
