--- a/ac/README.html
+++ b/ac/README.html
@@ -135,6 +135,10 @@
                 <td>Bot Code</td>
             </tr>        
             <tr>
+                <td>Julian &ldquo;absinth&rdquo; Mayer</td>
+                <td>Packaging ActionCube for Mac</td>
+            </tr>
+            <tr>
                 <td>Paul &ldquo;JCDPC&rdquo; Cash</td>
                 <td>Laptop Model, Company</td>
             </tr>
@@ -191,7 +195,7 @@
 
     </div>
     
-    <div id="footer">2006/12/07</div>
+    <div id="footer">2007/01/17</div>
     
 </div>
 
