--- a/ac/README.html
+++ b/ac/README.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
     <!--
-        redirect html file to make sure the XML documentation gets openend with the default browser
+        redirect html file to make sure the XML documentation gets opened with the default browser
     -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
