fixed redirect url
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3137 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/README.html
+++ b/ac/README.html
@@ -6,7 +6,7 @@
 <head>
     <title>AssaultCube</title>
     <meta http-equiv="content-type" content="application/xhtml+xml;charset=utf-8" />
-    <meta http-equiv="refresh" content="0; url=docs/README.xml" />
+    <meta http-equiv="refresh" content="0; url=docs/README.html" />
     <style type="text/css">
         body
         {
