--- a/ac/README.html
+++ b/ac/README.html
@@ -4,7 +4,8 @@
     -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-    <title>AssaultCube</title>
+    <title>AssaultCube v1.1 [alpha]</title>
+<!-- release notes: 2010 JUL 18/19 - alpha package - Work In Progress - considered unstable -->
     <meta http-equiv="content-type" content="application/xhtml+xml;charset=utf-8" />
     <meta http-equiv="refresh" content="0; url=docs/README.html" />
     <style type="text/css">
